# classy-persistent

./: .gitignore  README.md  classy-persistent.cabal
src/Database/Persistent/: Classy.hs
test/: Spec.hs
